--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,4 +1,28 @@
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Pagination Bullets */
 .swiper-pagination-bullet {
+  right: 0;
   height: 0.25rem;
   width: 1.5rem;
   border-radius: 0.5rem;
